--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ github_username:  jekyll
 
 # Build settings
 theme: jekyll-theme-chirpy
-# plugins:
-#   - jekyll-feed
+plugins:
+  - jekyll-feed
 
 google_site_verification: # fill in to your verification string
 
