--- a/_config.yml
+++ b/_config.yml
@@ -2,14 +2,16 @@ domain: tekcatz.github.io      # if you want to force HTTPS, specify the domain 
 url: https://tekcatz.github.io  # the base hostname and protocol for your site, e.g. http://example.com
 baseurl: /
 
-title: Your awesome title
-email: your-email@example.com
+timezone: Asia/Saigon
+
+title: TekCatZ
+email: tekcatz.blog@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: TekCatZ
+# github_username:  jekyll
 
 # Build settings
 theme: jekyll-theme-chirpy
@@ -24,17 +26,6 @@ google_site_verification: # fill in to your verification string
 google_analytics:
   id: # fill in your Google Analytics ID
 
-# Prefer color scheme setting.
-#
-# Note: Keep empty will follow the system prefer color by default,
-# and there will be a toggle to switch the theme between dark and light
-# on the bottom left of the sidebar.
-#
-# Available options:
-#
-#     light  - Use the light color scheme
-#     dark   - Use the dark color scheme
-#
 theme_mode: # [light|dark]
 
 # The CDN endpoint for images.
