--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,29 @@
-_site
-.sass-cache
-.jekyll-cache
-.jekyll-metadata
-vendor
-.bundle/
+# Compiled Object files, Static and Dynamic libs (Shared Objects)
+*.o
+*.a
+*.so
 
-.DS_Store?
-ehthumbs.db
-Icon?
-Thumbs.db
-*.DS_Store
+# Folders
+_obj
+_test
 
-*.idea
-*.iml
+# Architecture specific extensions/prefixes
+*.[568vq]
+[568vq].out
+
+*.cgo1.go
+*.cgo2.c
+_cgo_defun.c
+_cgo_gotypes.go
+_cgo_export.*
+
+_testmain.go
+
+*.exe
+*.test
+
+/public
+.DS_Store
+
 .vscode
-
-# Other source repository archive directories (protects when importing)
-.hg
-.svn
-CVS
-
-# automatic backup files
-*~.nib
-*.swp
-*~
-*(Autosaved).rtfd/
-Backup[ ]of[ ]*.pages/
-Backup[ ]of[ ]*.key/
-Backup[ ]of[ ]*.numbers/
-
-/web-app/WEB-INF
-build/
-*.[oa]
-*.pyc
-.log
-
-assets/js/dist
-*.gem
-
-# NPM dependencies
-node_modules
+.idea
