--- a/hugo.yaml
+++ b/hugo.yaml
@@ -17,7 +17,7 @@ params:
   title: TekCatZ
   description: "ExampleSite description"
   keywords: [Blog, PaperMod]
-  author: TekCatZ
+  author: ["TekCatZ", "Ming"]
   # author: ["Me", "You"] # multiple authors
   images: ["<link or path of image for opengraph, twitter-cards>"]
   DateFormat: "January 2, 2006"
